# ros_practice

./: CMakeLists.txt  README.md  package.xml  ros_kinetic_install.sh
action/: Timer.action
launch/: arm_robot.launch  arm_robot.launch~  simple_arm_robot.launch
my_command/: arm_robot.sh  simple_arm_robot.sh
src/: arm_robot_publisher.py  doubler.py  fancy_action_client.py  fancy_action_server.py  message_publisher.py  message_subscriber.py  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py  topic_publisher.py  topic_subscriber.py
urdf/: arm_robot.urdf  arm_robot.urdf~  simple_arm_robot.urdf
