<?xml version="1.0"?>
<package format="2">
  <name>ros_practice</name>
  <version>0.0.0</version>
  <description>The ros_practice package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
